# HEIG

./: .gitignore  README.md
semestre_1/ISD/TP1/: TP1_ISD_SA2023.ipynb
semestre_1/ISD/TP2/: TP2_ISD_SA2023_fullemann_regenass.ipynb
semestre_1/ISD/TP3-20231108/: TP3_ISD_SA2023_Regenass_Fullemann.ipynb  _TP3_ISD_SA2023_Regenass_Fullemann.ipynb
semestre_1/ISD/TP4-20231121/: TP4_ISD_SA2023.ipynb
semestre_1/ISD/TP5-20240110/: TP5_ISD_SA2022_Fullemann-Regenass.ipynb  temp-plot.html
semestre_1/PRG1/labo1/: fullemann_labo1.cpp
semestre_1/PRG1/labo10/: fullemann_labo10.xlsx  fullemann_labo10_v1.cpp  fullemann_labo10_v2.cpp
semestre_1/PRG1/labo12/: Rat.cpp  Rat.hpp  Sint.cpp  Sint.hpp  Uint.cpp  Uint.hpp  main.cpp
semestre_1/PRG1/labo2/: fullemann_labo2.cpp
semestre_1/PRG1/labo3/: fullemann_labo3_1.cpp  fullemann_labo3_2.cpp
semestre_1/PRG1/labo4/: fullemann_labo4_V1.cpp  fullemann_labo4_V2.cpp
semestre_1/PRG1/labo5/: fullemann_labo5.cpp
semestre_1/PRG1/labo6/: fullemann_labo6.cpp
semestre_1/PRG1/labo7/: fullemann_labo7.cpp
semestre_1/PRG1/labo8/: fullemann_labo8_1.cpp  fullemann_labo8_2.cpp  fullemann_labo8_3.cpp
semestre_1/PRG1/labo9/: fullemann_labo9_1.cpp  fullemann_labo9_2.cpp
semestre_1/SYL/Labo3/: labo_chenillard_etu.circ
semestre_1/SYL/labo1/: labo1.circ  regenass_fullemann.docx  regenass_fullemann_labo_checksum_etu.circ
semestre_2.5/PIN-Project-2024/: README.md
semestre_2.5/PIN-Project-2024/Code/: Particle.cpp  Robot.h  State.h  main.cpp  robotsui.cpp  robotsui.ui  robotwidget.cpp  robotwidget.h
semestre_2.5/PIN-Project-2024/Code/setup/: Algo_traj.cpp  CMakeLists.txt  Constraints.h  Particle.cpp  Position.h  Robot.cpp  Robot.h  Types.h
semestre_2/ARO/labo1/: processeur_ARO2.circ
semestre_2/ARO/labo1_fetch/: main.S  note.txt
semestre_2/ARO/labo2/: asd.circ  data.numbers  data.xlsx  note.txt  processeur_ARO2.circ
semestre_2/ARO/labo2_decode-execute/: processeur_ARO2.circ
semestre_2/ARO/labo3_pipeline/: mul_pipeline_1.circ
semestre_2/ARO/labo5/: note.txt  processeur_ARO2_pipeline_student.circ
semestre_2/ARO/labo5_forwarding/: note.txt  processeur_ARO2_pipeline_fullemann.circ
semestre_2/ASD/ASD2024-L1-Complexite-main/: .gitignore  README.md
semestre_2/ASD/ASD2024-L1-Complexite-main/src/: 1.main.cpp  2.main.cpp  3.main.cpp  CMakeLists.txt  OpCounter.cpp  OpCounter.h  example.cpp  tris.cpp
semestre_2/ASD/ASD2024-L2-Recursivite/: .gitignore
semestre_2/ASD/ASD2024-L3-Tris-main/: .gitignore  FEEDBACK.md
semestre_2/ASD/ASD2024-L3-Tris-main/src/: CMakeLists.txt  main.cpp  main_check-tris.cpp  main_time.cpp  some_bits.h  tri_par_base.h  tri_rapide.h
semestre_2/ASD/ASD2024-L4-Buffer-circulaire-de-capacite-variable/: .gitignore  README.md
semestre_2/ASD/ASD2024-L5-Liste-Simple/: README.md
semestre_2/ASD/ASD2024-L6-Expressions-arithmetiques/: README.md
semestre_2/ASD/ASD2024-L7-Arbre-AVL/: Groupe 4.md  README.md
semestre_2/ASD/ASD2024-L8-HashMap/: .gitignore  README.md
semestre_2/ASD/ASD2024-L9-Taquin/: CMakeLists.txt  README.md  rapport.md  taquin.cpp
semestre_2/PIN/PIN-Project-2024/: .gitignore
semestre_2/PRG2/prg2_24_lab01-main/: README.md
semestre_2/PRG2/prg2_24_lab02-main/: .gitignore  README.md
semestre_2/PRG2/prg2_24_lab03-main/: README.md  note.txt
semestre_2/PRG2/prg2_24_lab04-main/: README.md  better_grades  better_grades.c  note.txt
semestre_2/PRG2/prg2_24_lab05-main/: CMakeLists.txt  README.md  note.txt
semestre_2/PRG2/prg2_24_lab06-main/: CMakeLists.txt  README.md
semestre_2/PRG2/prg2_24_lab06-main/src/: cargo_ship.c  cargo_ship.h  combat_ship.c  combat_ship.h  command_ship.c  command_ship.h  config.h  main.c  ship.c  ship.h
semestre_2/PRG2/prg2_24_lab07/: CMakeLists.txt  README.md  note.txt
semestre_2/PRG2/prg2_24_lab08/: CMakeLists.txt  README.md
semestre_2/RXI/labo3/: Checklist tests.docx  Plan dadressage.docx
semestre_3/DAI/: resume-2.md
semestre_3/DAI/labo03_dai-lab-smtp/: README.md  config.properties  messages.txt  victims.txt
semestre_3/DAI/labo04_dai-lab-http-infrastructure/: README.md  docker-compose.yml
semestre_3/PCO/: resume_test_2.md
semestre_3/PCO/PCO_Labo4/: .gitignore  note.txt
semestre_3/PCO/labo02/: rapport.docx
semestre_3/PCO/labo03/: note.txt
semestre_3/PCO/labo03/code/: CMakeLists.txt
semestre_3/PCO/labo03/code/src/: ambulance.cpp  ambulance.h  clinic.cpp  clinic.h  hospital.cpp  hospital.h  seller.cpp  seller.h  supplier.cpp  supplier.h  tests_main.cpp  utils.cpp
semestre_3/PCO/labo03/code/src/internal/: costs.h  display.cpp  display.h  fakeinterface.h  iwindowinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.h  windowinterface.cpp  windowinterface.h
semestre_3/PCO/labo05/code/: CMakeLists.txt
semestre_3/PCO/labo05/code/include/: quicksort.h
semestre_3/PCO/labo05/code/tests/: main.cpp
semestre_3/PCO/labo06/: note.txt
semestre_3/POO/Labo02/: 1.1_media.mdj  1.2_pays.mdj  1.3_Garage.mdj  1.4_Paquebot.mdj  1.5_Arbre.mdj  2.1_Livres.mdj  2.2_ecole.mdj  Raport_Labo02.docx
semestre_3/POO/Labo03/: Gymnastique.mdj  Rappot.docx
semestre_3/POO/Labo08/: Rapport.docx
semestre_3/POO/labo05/: Matrices.mdj  labo05.docx
semestre_3/POO/labo06.ecole/: pom.xml
semestre_3/POO/labo07/: Rapport du Laboratoire 7.docx
semestre_3/SYE/: labo01.diff  labo02.diff  labo03.diff  labo04.diff  labo05.diff
semestre_4/ASM/: labo01.md  retrieve_lab  test1.md
semestre_4/ASM/asm_lab02/: crackme_mod.txt  crackme_reg.txt  rapport.md
semestre_4/ASM/asm_lab03/: .rendu.sh
semestre_4/ASM/asm_lab04/: .rendu.sh
semestre_4/ASM/asm_lab05/: .rendu.sh
semestre_4/ASM/asm_lab06/: .rendu.sh  addr2fun.sh  st
semestre_4/ASM/asm_lab07/: .rendu.sh  st  st86
semestre_4/ASM/asm_lab08/: .rendu.sh
semestre_4/CRY/EXs/: chacha20.py  série1.md  série2.md  série3.md  série4.md  série5.md  tempCodeRunnerFile.py  test.py
semestre_4/CRY/Labo04/: HEIG-VDRoot.crt  cert.conf  donnée.md  marcheasuivre.md  rapport.md
semestre_4/PDL/pdl-a-l1-introduction-Fullann-1/: README.md
semestre_5/SYE/: command.md  labflash_1.patch  labflash_2.patch  labflash_3.patch
(+726 files in other folders)
